--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,27 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.JeyM1</groupId>
-    <artifactId>lab1_Pizza-creation</artifactId>
+    <artifactId>development-technologies</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.6.28</version>
+        </dependency>
+
+    </dependencies>
 
     <properties>
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
     </properties>
-    
+
+
+
 </project>
