--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,9 @@
     <properties>
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
+        <sonar.projectKey>JeyM1_development-technologies</sonar.projectKey>
+        <sonar.organization>jeym1</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <build>
